--- a/Files/css/overlay.css
+++ b/Files/css/overlay.css
@@ -12,15 +12,23 @@ overflow:hidden;
 z-index:2000;
 }
 
- video{
-	width: 100%;
-	height:100%;
-	background-color:#444;
-	position:absolute;
-	top:0px;
-	left:0px;
-}
+ .video{
+     width: 100%;
+     height:100%;
+     background-color:#444;
+     position:absolute;
+     top:0px;
+     left:0px;
+     z-index:0;
+ }
 
+ #nocam i{
+     color: #eee;
+     width: 100%;
+     text-align: center;
+     font-size: 32vw;
+     margin-top: 20%;
+ }
 .talking#username .value {
 	color: rgba(0,255,0,0.7) !important;
 }
