--- a/Files/css/overlay.css
+++ b/Files/css/overlay.css
@@ -59,7 +59,7 @@ position: absolute;
 
 #info{
 position: absolute;
-  bottom: 25;
+  bottom: 25px;
   width: 100%;
   height:40px;
   left: 0;
@@ -70,10 +70,10 @@ position: absolute;
   font-weight:bold;
 }
 
-#settings{
+.iconbar{
 margin: 1px;
 float:right;
 }
-#settings i{
+.iconbar i{
 font-size:18px;
 }
